--- a/SwiftUtilBiP.xcodeproj/xcshareddata/xcschemes/BiPiOS.xcscheme
+++ b/SwiftUtilBiP.xcodeproj/xcshareddata/xcschemes/BiPiOS.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9DE027AD22FB1C4300D8A524"
+               BuildableName = "SwiftUtilBiPIOSTests.xctest"
+               BlueprintName = "SwiftUtilBiPIOSTests"
+               ReferencedContainer = "container:SwiftUtilBiP.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
