--- a/SwiftUtilBiP.xcodeproj/xcshareddata/xcschemes/BiPmacOS.xcscheme
+++ b/SwiftUtilBiP.xcodeproj/xcshareddata/xcschemes/BiPmacOS.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9DE027BB22FB1C5C00D8A524"
+               BuildableName = "SwiftUtilBiPMacOSTests.xctest"
+               BlueprintName = "SwiftUtilBiPMacOSTests"
+               ReferencedContainer = "container:SwiftUtilBiP.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
