--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ osx_image: xcode10.1
 xcode_workspace: SwiftUtilBiP.xcodeproj # path to your xcodeproj folder
 xcode_scheme: BiPMacOS
 xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone X
-before_install:
-    - pod install
+#before_install:
+#    - pod install
 after_success:
     - gem install jazzy
     - make docs
