--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 osx_image: xcode10.1
-xcode_workspace: SwiftUtilBiP.xcodeproj # path to your xcodeproj folder
-xcode_scheme: BiPMacOS
+xcode_workspace: SwiftUtilBiP.xcworkspace # path to your xcodeproj folder
+xcode_scheme: BiPiOS
 xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone X
 #before_install:
 #    - pod install
