--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ after_success:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GH_TOKEN  # Set in the settings page of your repository, as a secure variable
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   local-dir: docs
   on:
     branch: master
