--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -v
+    - uses: actions/checkout@master
+#   - name: Build
+#     run: swift build -v
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild clean test -project TodoSampleApp.xcodeproj -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
