--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-    - name: Build Pods
-      run: xcodebuild clean test -project Pods/Pods.xcodeproj -scheme Pods-SwiftUtilBiPIOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+    #- name: Build Pods
+    # run: xcodebuild clean test -project Pods/Pods.xcodeproj -scheme Pods-SwiftUtilBiPIOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
     - name: Run tests
-      run: xcodebuild clean test -project SwiftUtilBiP.xcodeproj -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+      run: xcodebuild clean test -workspace SwiftUtilBiP.workspace -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
