--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
     #- name: Build Pods
     # run: xcodebuild clean test -project Pods/Pods.xcodeproj -scheme Pods-SwiftUtilBiPIOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
     - name: Run tests
-      run: xcodebuild clean test -workspace SwiftUtilBiP.workspace -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+      run: xcodebuild clean test -workspace SwiftUtilBiP.xcworkspace -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
