--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Swift
+name: XCTests
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-    #- name: Build Pods
-    # run: xcodebuild clean test -project Pods/Pods.xcodeproj -scheme Pods-SwiftUtilBiPIOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
-    - name: Run tests
+    - name: Run tests iOS
       run: xcodebuild clean test -workspace SwiftUtilBiP.xcworkspace -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+    - name: Run tests macOS
+      run: xcodebuild clean test -workspace SwiftUtilBiP.xcworkspace -scheme BiPmacOS -destination "platform=macOS"
