--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Run tests iOS
-      run: xcodebuild clean test -workspace SwiftUtilBiP.xcworkspace -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
+      run: xcodebuild clean test -scheme BiPiOS -destination "platform=iOS Simulator,name=iPhone 11 Pro"
     - name: Run tests macOS
-      run: xcodebuild clean test -workspace SwiftUtilBiP.xcworkspace -scheme BiPmacOS -destination "platform=macOS"
+      run: xcodebuild clean test -scheme BiPmacOS -destination "platform=macOS"
